file uploading route is done with working file upload and jwt verify is working but pending engine implementation
